# SmartNotes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc
src/: CallbackData.cpp  CallbackData.h  CallbackPanel.cpp  CallbackPanel.h  DatabaseManager.cpp  DatabaseManager.h  HamburgerMenu.cpp  HamburgerMenu.h  MainWindow.cpp  MainWindow.h  NoteParser.cpp  NoteParser.h  NotesEditor.cpp  NotesEditor.h  NotesRepository.cpp  NotesRepository.h  ReminderPopup.cpp  ReminderPopup.h  ReminderService.cpp  ReminderService.h  ThemeManager.cpp  ThemeManager.h  main.cpp
